JumpScript/tests/baselines/reference/parse2.errors.txt
tests/cases/compiler/parse2.jump(3,1): error TS1135: Argument expression expected.


==== tests/cases/compiler/parse2.jump (1 errors) ====
    function foo() {
     foo(
    }
    ~
!!! error TS1135: Argument expression expected.